[package]
name = "dl-webserver"
version = "0.1.0"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"

[dependencies]
batched-fn = { version = "0.2.0" }
tokio = { version = "0.2.13", features = ["full"] }
warp = "0.2"
tch = "0.1.6"
rust-bert = "0.7.11"
env_logger = "0.7.1"
log = "0.4"
serde = "1.0"
dirs = "3.0"
