[package]
name = "dl-webserver"
version = "0.1.0"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"

[dependencies]
batched-fn = { version = "0.2.2" }
tokio = { version = "1.3.0", features = ["full"] }
warp = "0.3.0"
tch = "0.3.1"
rust-bert = "0.14.0"
env_logger = "0.8.1"
log = "0.4"
serde = "1.0"
dirs = "3.0"
